# portmanteau

./: .gitmodules  README.md
framework/: mafia
portmanteau-aeson/: portmanteau-aeson.cabal
portmanteau-aeson/src/Portmanteau/: Aeson.hs  Aeson2.hs
portmanteau-aeson/test/: test.hs
portmanteau-aeson/test/Test/Portmanteau/: Aeson.hs  Aeson2.hs
portmanteau-binary/: portmanteau-binary.cabal
portmanteau-binary/src/Portmanteau/: Binary.hs
portmanteau-binary/src/Portmanteau/Binary/: Codec.hs  Primitives.hs  VInt.hs
portmanteau-binary/test/: portmanteau-binary-test.cabal  test.hs
portmanteau-binary/test/Test/Portmanteau/: Binary.hs
portmanteau-binary/test/Test/Portmanteau/Binary/: Sequence.hs  Trade.hs  VInt.hs
portmanteau-core/: portmanteau-core.cabal
portmanteau-core/src/Portmanteau/: Core.hs
portmanteau-core/src/Portmanteau/Core/: Codec.hs  CodecA.hs  Parser.hs
portmanteau-core/test/: portmanteau-core-test.cabal  test.hs
portmanteau-core/test/Test/Portmanteau/Core/: Codec.hs
portmanteau-lens/: portmanteau-lens.cabal
portmanteau-lens/src/Portmanteau/: Lens.hs
portmanteau-lens/src/Portmanteau/Lens/: TH.hs
portmanteau-syntax/: portmanteau-syntax.cabal
portmanteau-syntax/src/Portmanteau/: Syntax.hs
portmanteau-syntax/src/Portmanteau/Syntax/: Attoparsec.hs
portmanteau-syntax/test/: test.hs
portmanteau-syntax/test/Test/Portmanteau/Syntax/: Attoparsec.hs  Json.hs
