name:                  portmanteau-aeson
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
copyright:             (c) 2016 Charles O'Farrell.
synopsis:              portmanteau-aeson
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           portmanteau-aeson

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.10.*
                    , ambiata-p
                    , contravariant                   == 1.4.*
                    , portmanteau-core
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6
                    , unordered-containers            == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                      Portmanteau.Aeson
