name:                  portmanteau-aeson
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
copyright:             (c) 2016 Charles O'Farrell.
synopsis:              portmanteau-aeson
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           portmanteau-aeson

library
  build-depends:
                      base                            >= 3          && < 5
                    , aeson                           == 0.10.*
                    , ambiata-p
                    , contravariant                   == 1.4.*
                    , portmanteau-core
                    , text                            == 1.2.*
                    , transformers                    >= 0.4        && < 0.6
                    , unordered-containers            == 0.2.*

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                      Portmanteau.Aeson


test-suite test
  type:                exitcode-stdio-1.0
  main-is:             test.hs
  ghc-options:         -Wall -threaded -O2
  hs-source-dirs:      test
  build-depends:       base
                     , ambiata-p
                     , portmanteau-aeson
                     , QuickCheck                      == 2.7.*
                     , quickcheck-instances            == 0.3.*
