name:                  portmanteau-core
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
copyright:             (c) 2016 Charles O'Farrell.
synopsis:              portmanteau-core
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           portmanteau-core

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , contravariant                   == 1.4.*
                    , profunctors                     == 5.2.*
                    , transformers                    >= 0.4        && < 0.6

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                      Portmanteau.Core
                      Portmanteau.Core.Codec
                      Portmanteau.Core.Parser
