name:                  portmanteau-lens
version:               0.0.1
license:               AllRightsReserved
author:                Charles O'Farrell <charleso@charleso.org>
maintainer:            Charles O'Farrell <charleso@charleso.org>
copyright:             (c) 2016 Charles O'Farrell.
synopsis:              portmanteau-lens
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           portmanteau-lens

library
  build-depends:
                      base                            >= 3          && < 5
                    , ambiata-p
                    , lens                            >= 4.6        && < 4.16
                    , profunctors                     == 5.2.*
                    , template-haskell
                    , transformers                    >= 0.4        && < 0.6

  ghc-options:
                    -Wall

  hs-source-dirs:
                    src

  exposed-modules:
                      Portmanteau.Lens
                      Portmanteau.Lens.TH
